# L2-ATLAS-PROJECT

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  ATTRIBUTION.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  LIMITATIONS.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  l2_atlas_30_day_mass_adoption_wedge_plan.md
.debug/: 2026-07-04-cli-gap-analysis-and-next-sprint.md  2026-07-04-provider-shape-fix-and-session-investigation.md  2026-07-04-session-creation-failure-investigation.md
.github/: labels.yml
.planning/: MILESTONES.md  NEXT-STEPS.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  RISKS.md  ROADMAP.md  STATE.md  config.json
artifacts/: .gitignore
docs/: INSTALL.md  README.md  golden-workflows.md  known-failures.md  tools.md
foundation/: ATTRIBUTION.md  DIVERGENCE_LOG.md  README.md
install/: install.ps1  install.sh
modules/: README.md
native/atlas-core-rs/: Cargo.toml
native/atlas-core-rs/crates/atlas-gateway/: Cargo.toml
native/atlas-core-rs/crates/atlas-gateway/src/: db.rs  lib.rs  main.rs  retention.rs
native/atlas-core-rs/crates/atlas-gateway/tests/: api.rs  contract.rs
scripts/: fresh_db_smoke.py  (+22 more)
services/agent-runtime/: pyproject.toml
services/agent-runtime/atlas_audit/: __init__.py  plugin.yaml
services/agent-runtime/atlas_runtime/: __init__.py  actor_bridge.py  actor_service.py  actor_worker.py  agent_contract_service.py  audit_service.py  auth_service.py  brain_service.py  cashflow_control.py  cockpit_control.py  codex_auth.py  component_service.py  config_service.py  console_service.py  context_service.py  control_plane_service.py  db.py  demo_seed.py  discord_api.py  discord_control.py  discord_service.py  focus_service.py  freellmapi_control.py  function_router.py  gateway_control.py  goal_service.py  golden_workflow_registry.py  golden_workflow_service.py  graph_bridge.py  graph_query.py  graph_scope_service.py  graph_service.py  hardline_policy.py  logging_config.py  memory_router.py  messaging_gateway_control.py  mission_loop_service.py  mission_service.py  model_control_service.py  model_registry.py  (+25 more)
services/agent-runtime/atlas_runtime/agents/: __init__.py  base.py  claude_code.py  codex.py  mock.py  native.py  registry.py
services/agent-runtime/atlas_runtime/cli/: __init__.py  atlas_terminal.py  auth.py  channels.py  components.py  config.py  discord.py  doctor.py  foundation.py  go_tui.py  golden.py  help_browser.py  interactive_select.py  main.py  models.py  provider.py  skills.py  surface.py  tools.py  tui.py
services/agent-runtime/atlas_runtime/evals/: __init__.py  agent_contract.py
services/agent-runtime/atlas_runtime/golden_workflows/: __init__.py  repo_triage.py  research_brief.py  self_review.py
services/agent-runtime/atlas_runtime/prompts/: atlas_core.md
services/agent-runtime/atlas_runtime/tools/: registry.py
services/agent-runtime/atlas_runtime/tools/adapters/: base.py  github.py  golden_review_write.py  web_fetch.py  webhook_notify.py  workspace.py
services/agent-runtime/atlas_runtime/tools/manifests/: __init__.py  github.yaml  golden_review_write.yaml  web_fetch.yaml  webhook_notify.yaml  workspace.yaml
services/agent-runtime/atlas_runtime/tui/: __init__.py  app.py  capabilities.py  command_dispatch.py  header.py  permission_ui.py  resume.py  session_select.py  theme.py  transcript.py
services/agent-runtime/tests/: conftest.py  test_actor_bridge.py  test_actor_service.py  test_agent_contract_schema.py  test_agent_contract_service.py  test_agents.py  test_agents_codex.py  test_atlas_audit_plugin.py  test_audit_service.py  test_auth_cli.py  test_auth_service.py  test_brain_service.py  test_cancellation.py  test_cashflow_control.py  test_channels_cli.py  test_cli.py  test_cli_doctor.py  test_cli_golden.py  test_cli_logs.py  test_cli_up.py  test_cockpit_control.py  test_codex_auth.py  test_compaction_resume_contract.py  test_component_service.py  test_config_cli.py  test_config_control_plane.py  test_config_service.py  test_conftest.py  test_console_service.py  test_context_retrieval_contract.py  test_context_service.py  test_conversation_history_retriever.py  test_cross_surface_permission_conformance.py  test_db_migrations.py  test_demo_seed.py  test_discord_api.py  test_discord_cli.py  test_discord_control.py  test_discord_service.py  test_focus_service.py  (+67 more)
services/agent-runtime/tests/cli/: test_surface_cli.py  test_tools_cli.py
services/agent-runtime/tests/evals/: test_agent_contract_evals.py
services/agent-runtime/tests/evals/fixtures/: agent_contract_scenarios.json
services/agent-runtime/tests/fixtures/: permission_policy_matrix.json  surface_event_parity.json
services/agent-runtime/tests/golden/prompts/: anthropic-compatible.json  generic.json  openai-compatible.json  tui.json  webui.json
services/agent-runtime/tests/tools/: conftest.py
services/agent-runtime/tests/tui/: conftest.py  test_cancel_unwind.py  test_capabilities.py  test_command_dispatch.py  test_composer_routing.py  test_event_renderers.py  test_header.py  test_permission_ui.py  test_resume_replay.py  test_session_select.py  test_transcript_poll.py
services/wiki-runtime/: pyproject.toml
services/wiki-runtime/atlas_wiki/: __init__.py  provenance_service.py  wiki_service.py
services/wiki-runtime/atlas_wiki/cli/: __init__.py  main.py
services/wiki-runtime/tests/: conftest.py  test_cli.py  test_provenance_service.py  test_wiki_service.py
(+1369 files in other folders)
