[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-runtime"
version = "0.1.0"
description = "ATLAS agent-runtime service layer"
requires-python = ">=3.11"
dependencies = [
    "atlas-core",
    "typer>=0.25.0",
    # Manifest loader (Phase 10.0.4). Already resolved transitively (6.0.3) — this
    # declaration makes the `import yaml` in tools/registry.py explicit and
    # supply-chain-honest. No new package is installed.
    "pyyaml>=6,<7",
    # ATLAS Terminal Workbench (Phase 10.6). Already resolved transitively
    # (rich 14.3.3 via typer; prompt_toolkit 3.0.52 via hermes-agent) — declared
    # directly per supply-chain honesty. No new package is installed.
    "rich>=13.7,<15",
    "prompt_toolkit>=3.0,<4",
]

[project.scripts]
atlas = "atlas_runtime.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=7.0"]
# claude_code AgentRuntime (P4): drives the operator's local Claude Code
# session. Optional so native-only installs stay lean; lazy-imported in
# atlas_runtime.agents.claude_code.
claude = ["claude-agent-sdk>=0.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["atlas_runtime", "atlas_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["atlas_runtime"]

[tool.coverage.report]
fail_under = 80
