[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-runtime"
version = "0.1.0"
description = "ATLAS agent-runtime service layer"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "atlas-core>=0.1,<0.2",
    "typer>=0.25.0",
    # Manifest loader (Phase 10.0.4). Already resolved transitively (6.0.3) — this
    # declaration makes the `import yaml` in tools/registry.py explicit and
    # supply-chain-honest. No new package is installed.
    "pyyaml>=6,<7",
]

[project.scripts]
atlas = "atlas_runtime.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=7.0", "ruff>=0.15,<1"]
# claude_code AgentRuntime (P4): drives the operator's local Claude Code
# session. Optional so native-only installs stay lean; lazy-imported in
# atlas_runtime.agents.claude_code.
claude = ["claude-agent-sdk>=0.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["atlas_runtime", "atlas_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["atlas_runtime"]

[tool.coverage.report]
fail_under = 80
