[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-wiki"
version = "0.1.0"
description = "ATLAS wiki-runtime service layer"
requires-python = ">=3.11"
dependencies = [
    "atlas-core",
    "atlas-runtime",
    "typer>=0.25.0",
]

[project.optional-dependencies]
semantic = ["sqlite-vec>=0.1.9", "fastembed>=0.8.0"]
dev = ["pytest>=9.0", "pytest-cov>=7.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["atlas_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["atlas_wiki"]

[tool.coverage.report]
fail_under = 80
