[package]
name = "atlas-gateway"
version = "0.1.0"
description = "L2 ATLAS API gateway — first native crate (D-022 L0). Reads SQLite directly; writes dispatch via the `atlas` CLI contract."
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["io-util"] }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
futures-util.workspace = true

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
tempfile.workspace = true
